--- a/css/style.css
+++ b/css/style.css
@@ -13,3 +13,15 @@ body{
     overflow: hidden;
     margin: 0%;
 }
+
+.quiz-container{
+    background-color: #8ee211;
+    border-radius: 10px;
+    box-shadow: 0 0 10px 2px rgba(100, 100, 100, 0.1);
+    width: 600px;
+    overflow: hidden;
+}
+
+.quiz-header{
+    
+}
