--- a/css/style.css
+++ b/css/style.css
@@ -36,3 +36,13 @@ ul{
     list-style-type: none;
     padding: 0;
 }
+
+ul li{
+    font-size: 1.2rem;
+    margin: 1rem 0;
+}
+
+ul li label{
+    cursor: pointer;
+    
+}
