--- a/css/style.css
+++ b/css/style.css
@@ -44,5 +44,26 @@ ul li{
 
 ul li label{
     cursor: pointer;
-    
+
+}
+
+button{
+    background-color: #2d41ee;
+    color: #0f0f0f;
+    border: none;
+    display: block;
+    width: 100%;
+    cursor: pointer;
+    font-size: 1.1rem;
+    font-family: inherit;
+    padding: 1.3rem;
+}
+
+button:hover{
+    background-color: #868edf;
+}
+
+button:focus{
+    outline: none;
+    background-color: #868edf;
 }
