--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,8 @@
 }
 
 body{
-    background-color: #8ee211;
-    background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7f7 100%);
+    background-color: #5e6164;
+    background-image: linear-gradient(315deg, #e9eff5 0%, #5e6164 100%);
     font-family: 'Poppins', sans-serif;
     display: flex;
     align-items: center;
@@ -15,7 +15,7 @@ body{
 }
 
 .quiz-container{
-    background-color: #8ee211;
+    background-color: #fdfff9;
     border-radius: 10px;
     box-shadow: 0 0 10px 2px rgba(100, 100, 100, 0.1);
     width: 600px;
